fixed misalignment of Nav to content.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -44,14 +44,27 @@
 
  nav {
   background-color: #1e6694;
-  padding: 6em 3rem;
+  padding: 6em 0;
   font-weight: 700;
   font-size: 1.2rem;
   color: #c9edf5;
   text-transform: uppercase;
-  background-image: url("../images/alley_bw.jpg");
+  background-image:
+    linear-gradient(
+    to right bottom,
+    rgba(126, 213, 111, 0.601),
+    rgba(40, 180, 133, 0.608)),
+    url("../images/alley_bw.jpg");
   background-position: center;
   background-size: cover;
+}
+
+nav-links {
+  width: 80%;
+  display: block;
+  /* margin: 2.5em auto 2em auto; */
+  margin: 0 auto 0 auto;
+  padding: 1.4rem;
 }
 
 nav a {
